refactoring classes to use properties configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.defer-datasource-initialization=true
+
+omdb.client.url=https://www.omdbapi.com/?apikey=d11be93c
+imdb.web.scrapping.enabled=true
